solving issue with z-index

--- a/app/assets/stylesheets/pages/_junk-show.scss
+++ b/app/assets/stylesheets/pages/_junk-show.scss
@@ -166,11 +166,9 @@
 .modal-content {
   margin: auto;
   display: block;
-  max-width: 45vw;
-  max-height: 80vh
-    /* width: 100%;
-  max-width: 900px; */
-    /*  z-index: 9999999; */
+  width: 100%;
+  max-width: 900px;
+  z-index: 9999999;
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
